[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/mobs/type_1/tile_0320.png" type="Texture" id=1]
[ext_resource path="res://scripts/classes/skelly.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 64.0

[sub_resource type="CircleShape2D" id=2]
radius = 12.0

[node name="Skelly" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -3 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, -3 )
polygon = PoolVector2Array( -5, -2, 5, -2, 5, 8, -5, 8 )

[node name="Detection_radios" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection_radios"]
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 64 )

[node name="Tween" type="Tween" parent="."]

[node name="Attack_Range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_Range"]
shape = SubResource( 2 )

[connection signal="body_entered" from="Detection_radios" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Detection_radios" to="." method="_on_Detection_radios_entered"]
[connection signal="body_exited" from="Detection_radios" to="." method="_on_Detection_radios_exited"]
[connection signal="body_entered" from="Attack_Range" to="." method="_on_Attack_Range_entered"]
[connection signal="body_exited" from="Attack_Range" to="." method="_on_Attack_Range_exited"]
